--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@geins/ralph-module-cms-json-container",
-  "version": "1.1.4",
-  "description": "CMS Module for Geins CMS to handle JSON widgets with ease",
+  "name": "@geins/ralph-module-cms",
+  "version": "2.0.0",
+  "description": "Module for Geins CMS to handle custom created widgets",
   "author": {
     "name": "arvidsson-geins"
   },
